@@ -9,6 +9,9 @@ namespace YAFC.Model
     [AttributeUsage(AttributeTargets.Property)]
     public class SkipSerializationAttribute : Attribute {}
 
+    [AttributeUsage(AttributeTargets.Property)]
+    public class NoUndoAttribute : Attribute {}
+
     internal abstract class SerializationMap
     {
         private static readonly UndoSnapshotBuilder snapshotBuilder = new UndoSnapshotBuilder();
